kustomize/base/scim-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scim-server
  labels:
    app: scim-server
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: scim-server
